third_party/move/move-compiler/tests/move_check/expansion/public_main.exp
error[E02002]: unnecessary or extraneous item
  ┌─ tests/move_check/expansion/public_main.move:2:1
  │
2 │ public fun main() {
  │ ^^^^^^ Invalid 'public' visibility modifier. Script functions are not callable from other Move functions.

